--- a/demo_proj/demo_app/templates/cart.html
+++ b/demo_proj/demo_app/templates/cart.html
@@ -1,37 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Products</h1>
-<div role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="false">
-  <div class="toast-header">
-    <img src="..." class="rounded mr-2" alt="...">
-    <strong class="mr-auto">Bootstrap</strong>
-    <small>11 mins ago</small>
-    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="toast-body">
-    Successfully added to cart
-  </div>
-</div>
+<h1>Carts</h1>
+<p>You are logged in as: {{user}}</p>
 {% for product in products %}
 
 <div class="card" style="width: 18rem;">
-  {% if product.product_image %}
-  <img class="card-img-top" src="{{product.product_image.url}}" alt="Card image cap">
+  {% if product.product.product_image %}
+  <img class="card-img-top" src="{{product.product.product_image.url}}" alt="Card image cap">
   {% endif %}
   <div class="card-body">
-    <h5 class="card-title">{{product.product_name}}</h5>
-    <p class="card-text">{{product.product_description}}</p>
-    <p class="card-text">{{product.product_price}}</p>
+    <h5 class="card-title">Product: {{product.product.product_name}}</h5>
+    <p class="card-text">Description: {{product.product.product_description}}</p>
+    <p class="card-text">Price: Rs.{{product.product.product_price}}</p>
 
-    <p name="product" id="product">{{product.id}}</p>
-    <p name="user" id="user">{{user.id}}</p>
+    <p hidden name="product" id="product">{{product.id}}</p>
+    <p hidden name="user" id="user">{{user.id}}</p>
 
     <a href="/product/{{product.id}}" class="btn btn-primary">Edit</a>
     <a href="/product_delete/{{product.id}}" class="btn btn-danger">Delete</a>
-    <a class="btn btn-primary" onclick="addtocart();">Add to cart</a>
+    <!-- <a class="btn btn-primary" onclick="addtocart();">Add to cart</a> -->
 
     <div class="mb-3">
       <label for="quantity" class="form-label">Quantity</label>
@@ -69,8 +57,7 @@
         // alert("cross domain ajax success full.");
 
         var result = res['message'];
-        // alert("result===" + result);
-        $('.toast').toast('show')
+        alert("result===" + result);
         // $("#dvAjax").html(result);
       },
       error:  function (res) {
