--- a/demo_proj/demo_app/templates/products.html
+++ b/demo_proj/demo_app/templates/products.html
@@ -64,9 +64,7 @@
       dataType: "json", //Expected data format from server 
       processdata: true,  //True or False 
 
-      success: function (res) { //On Successfull service call 
-        //shell.loaded(); 
-        // alert("cross domain ajax success full.");
+      success: function (res) {
 
         var result = res['message'];
         // alert("result===" + result);
