--- a/demo_proj/demo_app/templates/base.html
+++ b/demo_proj/demo_app/templates/base.html
@@ -22,6 +22,9 @@
         <li class="nav-item">
             <a class="nav-link" aria-current="page" href="{% url 'registration' %}">Registration</a>
         </li>
+        <li class="nav-item">
+          {% comment %} <a class="nav-link" aria-current="page" href="{% url 'registration' %}"</a> {% endcomment %}
+      </li>
 
         {% if user.is_authenticated %}
         <li class="nav-item">
